aplication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplication-service
spec:
  selector:
    run: app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
